--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -314,5 +314,6 @@
   "dn16:2.4.1": "Dok je živeo kraj Koṭigāme, Blaženi je često govorio monasima o Dhammi:",
   "dn16:2.4.2": "„Postoji vrlina, postoji koncentracija, postoji mudrost.",
   "dn16:2.4.3": "Kada se vežba zajedno sa vrlinom, koncentracija donosi veliki plod, velike zasluge.",
-  "dn16:2.4.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge."
+  "dn16:2.4.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
+  "dn16:2.4.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen nečistoća, a to su "
 }
