--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -317,5 +317,6 @@
   "dn16:2.4.4": "Kada se vežba zajedno sa koncentracijom, mudrost donosi veliki plod, velike zasluge.",
   "dn16:2.4.5": "Kada se vežba sa mudrošću, um postaje potpuno oslobođen nečistoća, a to su ",
   "dn16:2.4.6": "otrov žudnje za čulnim zadovoljstvima, otrov žudnje za večnim postojanjem i otrov neznanja.”",
-  "dn16:2.5.0": "9. Smrt u Nādiki"
+  "dn16:2.5.0": "9. Smrt u Nādiki",
+  "dn16:2.5.1": "Kada je ostao kraj Koṭigāme koliko je želeo, Blaženi reče poštovanom Ānandi:"
 }
