--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -321,5 +321,6 @@
   "dn16:2.5.1": "Kada je ostao kraj Koṭigāme koliko je želeo, Blaženi reče poštovanom Ānandi:",
   "dn16:2.5.2": "„Hajde, Ānanda, idemo do Nādike.”",
   "dn16:2.5.3": "„Da, poštovani gospodine,” odgovori Ānanda.",
-  "dn16:2.5.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Nādiku."
+  "dn16:2.5.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Nādiku.",
+  "dn16:2.5.5": "Tu se smestio u dvorani od cigala."
 }
