--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -324,5 +324,5 @@
   "dn16:2.5.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Nādiku.",
   "dn16:2.5.5": "Tu se smestio u dvorani od cigala.",
   "dn16:2.6.1": "Onda poštovani Ānanda dođe do Blaženog, pokloni mu se i sede sa strane. Sedeći tako, reče on Blaženom:",
-  "dn16:2.6.2": "„Poštovani gospodine, monah po imenu Sāḷha je umro u Nādiki."
+  "dn16:2.6.2": "„Poštovani gospodine, monah po imenu Sāḷha je umro u Nādiki. Kakva je njegova sudbina, koje je mesto njegovog preporađanja?"
 }
