--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -327,5 +327,6 @@
   "dn16:2.6.2": "„Poštovani gospodine, monah po imenu Sāḷha je umro u Nādiki. Kakva je njegova sudbina, koje je mesto njegovog preporađanja?",
   "dn16:2.6.3": "Monahinja po imenu Nandā je umrla u Nādiki. Kakva je njena sudbina, koje je mesto njenog preporađanja?",
   "dn16:2.6.4": "Nezaređeni sledbenik po imenu Sudatto je umro u Nādiki. Kakva je njegova sudbina, koje je mesto njegovog preporađanja?",
-  "dn16:2.6.5": "Nezaređena sledbenica po imenu Suđātā je umrla u Nādiki. Kakva je njena sudbina, koje je mesto njenog preporađanja?"
+  "dn16:2.6.5": "Nezaređena sledbenica po imenu Suđātā je umrla u Nādiki. Kakva je njena sudbina, koje je mesto njenog preporađanja?",
+  "dn16:2.6.6": "Nezaređeni sledbenik po imenu Kukkuta je umro u Nādiki. Kakva je njegova sudbina, koje je mesto njegovog preporađanja?"
 }
