--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -331,5 +331,6 @@
   "dn16:2.6.6": "Nezaređeni sledbenik po imenu Kukkuta je umro u Nādiki. Kakva je njegova sudbina, koje je mesto njegovog preporađanja?",
   "dn16:2.6.7": "Nezaređeni sledbenik po imenu Kālimba…",
   "dn16:2.6.8": "Nezaređeni sledbenik po imenu Nikaṭo…",
-  "dn16:2.6.9": "Nezaređeni sledbenik po imenu Katissaha…"
+  "dn16:2.6.9": "Nezaređeni sledbenik po imenu Katissaha…",
+  "dn16:2.6.10": "Nezaređeni sledbenik po imenu Tuṭṭha…"
 }
