--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -336,5 +336,6 @@
   "dn16:2.6.11": "Nezaređeni sledbenik po imenu Santuṭṭha…",
   "dn16:2.6.12": "Nezaređeni sledbenik po imenu Bhaddha…",
   "dn16:2.6.13": "Nezaređeni sledbenik po imenu Subhadda je umro u Nādiki. Kakva je njegova sudbina, koje je mesto njegovog preporađanja?",
-  "dn16:2.7.1": "Ānanda, pošto je uklonio nečistoće i zahvaljujući mudrosti u ovom životu dostigao oslobođenje uma lišeno nečistoća, monah Sāḷha je sam za sebe iskusio višu mudrost."
+  "dn16:2.7.1": "Ānanda, pošto je uklonio nečistoće i zahvaljujući mudrosti u ovom životu dostigao oslobođenje uma lišeno nečistoća, monah Sāḷha je sam za sebe iskusio višu mudrost.",
+  "dn16:2.7.2": "Monahinja Nandā je raskinula pet nižih okova i spontano se preporodila u drugom svetu, tako da se više nikada ne vrati u ovaj."
 }
