--- a/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "an3.20:0.1": "Nummerierte Lehrreden 3.20 ",
   "an3.20:0.2": "2. Das Kapitel über den Wagenbauer ",
   "an3.20:0.3": "Ein Händler (2) ",
-  "an3.20:1.1": "„Mönche und Nonnen, ein Kaufmann, der drei Faktoren besitzt, wird bald großen Besitz in Fülle erwerben. ",
+  "an3.20:1.1": "„Mönche und Nonnen, ein Händler, der drei Faktoren besitzt, wird bald großen Besitz in Fülle erwerben. ",
   "an3.20:1.2": "Welche drei? ",
   "an3.20:1.3": "Es ist, wenn ein Kaufmann klar sieht, unermüdlich ist und Förderer hat. ",
   "an3.20:1.4": "Und wie sieht ein Kaufmann klar? ",
