--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -347,5 +347,6 @@
   "dn16:2.7.9": "Tuṭṭho…",
   "dn16:2.7.10": "Santuṭṭho…",
   "dn16:2.7.11": "Bhadda…",
-  "dn16:2.7.12": "nezaređeni sledbenik Subhadda je raskinuo pet nižih okova i spontano se preporodio u drugom svetu, tako da se više nikada ne vrati u ovaj."
+  "dn16:2.7.12": "nezaređeni sledbenik Subhadda je raskinuo pet nižih okova i spontano se preporodio u drugom svetu, tako da se više nikada ne vrati u ovaj.",
+  "dn16:2.7.13": "Preko pedeset sledbenika je umrlo u Nādiki i pošto su raskinuli pet nižih okova i spontano se preporodili u drugom svetu, više se nikada neće vratiti u ovaj."
 }
