--- a/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an3.20:0.3": "Ein Händler (2) ",
   "an3.20:1.1": "„Mönche und Nonnen, ein Händler, der drei Faktoren besitzt, wird bald großen Besitz in Fülle erwerben. ",
   "an3.20:1.2": "Welche drei? ",
-  "an3.20:1.3": "Es ist, wenn ein Kaufmann klar sieht, unermüdlich ist und Förderer hat. ",
+  "an3.20:1.3": "Es ist, wenn ein Händler klar sieht, unermüdlich ist und Förderer hat. ",
   "an3.20:1.4": "Und wie sieht ein Kaufmann klar? ",
   "an3.20:1.5": "Es ist, wenn ein Kaufmann über ein Produkt weiß: ",
   "an3.20:1.6": "‚Dieses Produkt kann ich zu diesem Preis kaufen, zu diesem Preis verkaufen. So viel muss ich investieren und werde so viel Gewinn erhalten.‘ ",
