--- a/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "an3.20:1.3": "Es ist, wenn ein Händler klar sieht, unermüdlich ist und Förderer hat. ",
   "an3.20:1.4": "Und wie sieht ein Händler klar? ",
   "an3.20:1.5": "Es ist, wenn ein Händler über eine Ware weiß: ",
-  "an3.20:1.6": "‚Dieses Produkt kann ich zu diesem Preis kaufen, zu diesem Preis verkaufen. So viel muss ich investieren und werde so viel Gewinn erhalten.‘ ",
+  "an3.20:1.6": "‚Diese Ware kann ich zu diesem Preis kaufen, zu diesem Preis verkaufen. So viel muss ich investieren und werde so viel Gewinn erhalten.‘ ",
   "an3.20:1.7": "So sieht ein Händler klar. ",
   "an3.20:2.1": "Und wie ist ein Händler unermüdlich? ",
   "an3.20:2.2": "Es ist, wenn ein Händler Geschick beim Kauf und Verkauf seiner Produkte zeigt. ",
