--- a/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "an3.20:1.7": "So sieht ein Händler klar. ",
   "an3.20:2.1": "Und wie ist ein Händler unermüdlich? ",
   "an3.20:2.2": "Es ist, wenn ein Händler Geschick beim Kauf und Verkauf seiner Waren zeigt. ",
-  "an3.20:2.3": "So ist ein Kaufmann unermüdlich. ",
+  "an3.20:2.3": "So ist ein Händler unermüdlich. ",
   "an3.20:3.1": "Und wie hat ein Kaufmann Förderer? ",
   "an3.20:3.2": "Es ist, wenn reiche, wohlhabende und vermögende Hausbesitzerinnen oder Kinder von Hausbesitzern von ihm wissen: ",
   "an3.20:3.3": "‚Dieser Kaufmann schaut sich um und ist unermüdlich. Er ist in der Lage, für seine Frauen und Kinder zu sorgen und uns von Zeit zu Zeit zurückzuzahlen.‘ ",
