--- a/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
@@ -17,7 +17,7 @@
   "an3.20:3.3": "‚Dieser Händler schaut sich um und ist unermüdlich. Er ist in der Lage, für seine Frauen und Kinder zu sorgen und uns von Zeit zu Zeit zurückzuzahlen.‘ ",
   "an3.20:3.4": "Sie leihen dem Händler Geld: ",
   "an3.20:3.5": "‚Händler, mein Freund, nutze das hier, um Geld zu verdienen, sodass du für deine Frauen und Kinder sorgen und mir von Zeit zu Zeit zurückzahlen kannst.‘ ",
-  "an3.20:3.6": "So hat ein Kaufmann Förderer. ",
+  "an3.20:3.6": "So hat ein Händler Förderer. ",
   "an3.20:3.7": "Ein Kaufmann, der diese drei Faktoren besitzt, wird bald großen Besitz in Fülle erwerben. ",
   "an3.20:4.1": "Ebenso wird eine Nonne, die drei Eigenschaften besitzt, bald großartige taugliche Eigenschaften in Fülle erwerben. ",
   "an3.20:4.2": "Welche drei? ",
