--- a/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.20_translation-de-sabbamitta.json
@@ -18,7 +18,7 @@
   "an3.20:3.4": "Sie leihen dem Händler Geld: ",
   "an3.20:3.5": "‚Händler, mein Freund, nutze das hier, um Geld zu verdienen, sodass du für deine Frauen und Kinder sorgen und mir von Zeit zu Zeit zurückzahlen kannst.‘ ",
   "an3.20:3.6": "So hat ein Händler Förderer. ",
-  "an3.20:3.7": "Ein Kaufmann, der diese drei Faktoren besitzt, wird bald großen Besitz in Fülle erwerben. ",
+  "an3.20:3.7": "Ein Händler, der diese drei Faktoren besitzt, wird bald großen Besitz in Fülle erwerben. ",
   "an3.20:4.1": "Ebenso wird eine Nonne, die drei Eigenschaften besitzt, bald großartige taugliche Eigenschaften in Fülle erwerben. ",
   "an3.20:4.2": "Welche drei? ",
   "an3.20:4.3": "Es ist, wenn eine Nonne klar sieht, unermüdlich ist und Förderer hat. ",
