--- a/translation/de/sabbamitta/sutta/an/an3/an3.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.19_translation-de-sabbamitta.json
@@ -2,7 +2,7 @@
   "an3.19:0.1": "Nummerierte Lehrreden 3.19 ",
   "an3.19:0.2": "2. Das Kapitel über den Wagenbauer ",
   "an3.19:0.3": "Ein Händler (1) ",
-  "an3.19:1.1": "„Mönche und Nonnen, ein Kaufmann, der drei Faktoren besitzt, ist nicht in der Lage, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
+  "an3.19:1.1": "„Mönche und Nonnen, ein Händler, der drei Faktoren besitzt, ist nicht in der Lage, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
   "an3.19:1.2": "Welche drei? ",
   "an3.19:1.3": "Es ist, wenn ein Kaufmann sich nicht am Morgen, am Mittag und am Nachmittag sorgfältig seiner Arbeit widmet. ",
   "an3.19:1.4": "Ein Kaufmann, der diese drei Faktoren besitzt, ist nicht in der Lage, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
