--- a/translation/de/sabbamitta/sutta/an/an3/an3.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.19_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an3.19:0.3": "Ein Händler (1) ",
   "an3.19:1.1": "„Mönche und Nonnen, ein Händler, der drei Faktoren besitzt, ist nicht in der Lage, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
   "an3.19:1.2": "Welche drei? ",
-  "an3.19:1.3": "Es ist, wenn ein Kaufmann sich nicht am Morgen, am Mittag und am Nachmittag sorgfältig seiner Arbeit widmet. ",
+  "an3.19:1.3": "Es ist, wenn ein Händler sich nicht am Morgen, am Mittag und am Nachmittag sorgfältig seiner Arbeit widmet. ",
   "an3.19:1.4": "Ein Kaufmann, der diese drei Faktoren besitzt, ist nicht in der Lage, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
   "an3.19:2.1": "Ebenso ist ein Mönch, der drei Eigenschaften besitzt, nicht in der Lage, neue taugliche Eigenschaften zu erwerben oder vorhandene taugliche Eigenschaften zu vermehren. ",
   "an3.19:2.2": "Welche drei? ",
