--- a/translation/de/sabbamitta/sutta/an/an3/an3.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.19_translation-de-sabbamitta.json
@@ -8,7 +8,7 @@
   "an3.19:1.4": "Ein Händler, der diese drei Faktoren besitzt, ist nicht in der Lage, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
   "an3.19:2.1": "Ebenso ist ein Mönch, der drei Eigenschaften besitzt, nicht in der Lage, neue taugliche Eigenschaften zu erwerben oder vorhandene taugliche Eigenschaften zu vermehren. ",
   "an3.19:2.2": "Welche drei? ",
-  "an3.19:2.3": "Es ist, wenn ein Mönch sich nicht am Morgen, am Mittag und am Nachmittag sorgfältig einem Meditationsgegenstand widmet, der in die Versenkung führt. ",
+  "an3.19:2.3": "Es ist, wenn ein Mönch sich nicht am Morgen, am Mittag und am Abend sorgfältig einem Meditationsgegenstand widmet, der in die Versenkung führt. ",
   "an3.19:2.4": "Ein Mönch, der diese drei Eigenschaften besitzt, ist nicht in der Lage, neue taugliche Eigenschaften zu erwerben oder vorhandene taugliche Eigenschaften zu vermehren. ",
   "an3.19:3.1": "Ein Kaufmann, der drei Faktoren besitzt, ist in der Lage, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
   "an3.19:3.2": "Welche drei? ",
