--- a/translation/de/sabbamitta/sutta/an/an3/an3.19_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.19_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "an3.19:2.4": "Ein Mönch, der diese drei Eigenschaften besitzt, ist nicht in der Lage, neue taugliche Eigenschaften zu erwerben oder vorhandene taugliche Eigenschaften zu vermehren. ",
   "an3.19:3.1": "Ein Händler, der drei Faktoren besitzt, ist in der Lage, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
   "an3.19:3.2": "Welche drei? ",
-  "an3.19:3.3": "Es ist, wenn ein Kaufmann sich am Morgen, am Mittag und am Nachmittag sorgfältig seiner Arbeit widmet. ",
+  "an3.19:3.3": "Es ist, wenn ein Händler sich am Morgen, am Mittag und am Nachmittag sorgfältig seiner Arbeit widmet. ",
   "an3.19:3.4": "Ein Kaufmann, der diese drei Faktoren besitzt, ist in der Lage, neuen Besitz zu erwerben oder vorhandenen Besitz zu vermehren. ",
   "an3.19:4.1": "Ebenso ist ein Mönch, der drei Eigenschaften besitzt, in der Lage, neue taugliche Eigenschaften zu erwerben oder vorhandene taugliche Eigenschaften zu vermehren. ",
   "an3.19:4.2": "Welche drei? ",
