--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -43,7 +43,7 @@
   "dn27:6.1": "Aber manche Adlige unterlassen das Töten lebender Geschöpfe, das Stehlen und sexuelle Verfehlungen. Sie unterlassen falsche, entzweiende, harte oder unsinnige Rede. Und sie sind zufrieden und gütig und haben rechte Ansicht. ",
   "dn27:6.2": "Diese Dinge sind tauglich, ohne Tadel, sollten gepflegt werden und sind der Edlen würdig, und sie werden als solche angesehen. Es sind helle Taten mit hellem Ergebnis, die von vernünftigen Menschen gepriesen werden. Solche Dinge sieht man bei manchen Adligen. ",
   "dn27:6.3": "Und man sieht sie auch bei Brahmanen, ",
-  "dn27:6.4": "Kaufleuten ",
+  "dn27:6.4": "Händlern ",
   "dn27:6.5": "und Arbeitern. ",
   "dn27:7.1": "So kommt beides vor und ist über die vier Kasten verteilt – das Dunkle und das Helle, das, was von vernünftigen Menschen gepriesen und was von ihnen getadelt wird. Und doch sagen die Brahmanen: ",
   "dn27:7.2": "‚Nur die Brahmanen sind die erste Kaste; andere Kasten sind geringer. ",
