--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -234,7 +234,7 @@
   "dn27:23.7": "Denn, Vāseṭṭha, Grundsätze sind das erste Ding für die Menschen, sowohl in diesem als auch im nächsten Leben. ",
   "dn27:24.0": "12. Der Kreis der Händler ",
   "dn27:24.1": "Manche dieser Wesen nahmen ein aktives Sexualleben auf und widmeten sich verschiedenen Berufen. ",
-  "dn27:24.2": "‚Sie nehmen ein aktives Sexualleben auf und widmen sich verschiedenen Berufen‘ ist die Bedeutung von ‚Kaufmann‘, des Ausdrucks, der eigens für sie erdacht wurde. ",
+  "dn27:24.2": "‚Sie nehmen ein aktives Sexualleben auf und widmen sich verschiedenen Berufen‘ ist die Bedeutung von ‚Händler‘, des Ausdrucks, der eigens für sie erdacht wurde. ",
   "dn27:24.3": "Und so, Vāseṭṭha, wurde der alte, ursprüngliche Ausdruck für den Kreis der Kaufleute geschaffen; für eben diese Wesen, keine anderen; für die, die ihnen gleichen, nicht für Ungleiche; rechtmäßig, nicht unrechtmäßig. ",
   "dn27:24.4": "Denn, Vāseṭṭha, Grundsätze sind das erste Ding für die Menschen, sowohl in diesem als auch im nächsten Leben. ",
   "dn27:25.0": "13. Der Kreis der Arbeiter ",
