--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -242,7 +242,7 @@
   "dn27:25.2": "‚Sie leben von der Jagd und niederen Tätigkeiten‘ ist die Bedeutung von ‚Arbeiter‘, des Ausdrucks, der eigens für sie erdacht wurde. ",
   "dn27:25.3": "Und so, Vāseṭṭha, wurde der alte, ursprüngliche Ausdruck für den Kreis der Arbeiter geschaffen; für eben diese Wesen, keine anderen; für die, die ihnen gleichen, nicht für Ungleiche; rechtmäßig, nicht unrechtmäßig. ",
   "dn27:25.4": "Denn, Vāseṭṭha, Grundsätze sind das erste Ding für die Menschen, sowohl in diesem als auch im nächsten Leben. ",
-  "dn27:26.1": "Es kam eine Zeit, da ein Adliger, ein Brahmane, ein Kaufmann oder ein Arbeiter seinen eigenen Beruf missbilligte und aus dem Haus fortzog ins hauslose Leben: ",
+  "dn27:26.1": "Es kam eine Zeit, da ein Adliger, ein Brahmane, ein Händler oder ein Arbeiter seinen eigenen Beruf missbilligte und aus dem Haus fortzog ins hauslose Leben: ",
   "dn27:26.6": "‚Ich will ein Asket sein.‘ ",
   "dn27:26.7": "Und so, Vāseṭṭha, wurden diese vier Kreise geschaffen; für eben diese Wesen, keine anderen; für die, die ihnen gleichen, nicht für Ungleiche; rechtmäßig, nicht unrechtmäßig. ",
   "dn27:26.8": "Denn, Vāseṭṭha, Grundsätze sind das erste Ding für die Menschen, sowohl in diesem als auch im nächsten Leben. ",
