--- a/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn27_translation-de-sabbamitta.json
@@ -252,7 +252,7 @@
   "dn27:28.5": "",
   "dn27:29.1": "Ein Adliger, ein Brahmane, ein Händler, ein Arbeiter oder ein Asket mag mit dem Körper, der Sprache und dem Geist zweierlei Dinge tun tun. Er hat gemischte Ansichten, und er handelt dementsprechend. Und weil er so gehandelt hat, wird er, wenn sein Körper auseinanderbricht, nach dem Tod, sowohl Glück als auch Leid erfahren. ",
   "dn27:30.0": "15. Die Eigenschaften, die zum Erwachen führen ",
-  "dn27:30.1": "Ein Adliger, ein Brahmane, ein Kaufmann, ein Arbeiter oder ein Asket, der mit Körper, Sprache und Geist gezügelt ist und die sieben Eigenschaften entwickelt, die zum Erwachen führen, erlischt in diesem Leben. ",
+  "dn27:30.1": "Ein Adliger, ein Brahmane, ein Händler, ein Arbeiter oder ein Asket, der mit Körper, Sprache und Geist gezügelt ist und die sieben Eigenschaften entwickelt, die zum Erwachen führen, erlischt in diesem Leben. ",
   "dn27:31.1": "Jeder Mönch aus diesen vier Kasten, der vollendet ist – dessen Befleckungen aufgelöst sind, der die spirituelle Reise abgeschlossen hat, der getan hat, was zu tun war, die Last abgelegt, sein eigenes wahres Ziel erreicht, der die Fesseln der Wiedergeburt endgültig gelöst hat und durch Erleuchtung richtig befreit ist – jeder solche Mönch gilt als Vorderster durch Grundsätze, nicht ohne Grundsätze. ",
   "dn27:31.2": "Denn, Vāseṭṭha, Grundsätze sind das erste Ding für die Menschen, sowohl in diesem als auch im nächsten Leben. ",
   "dn27:32.1": "Auch der Brahmā Sanaṅkumāra hat diese Strophe gesprochen: ",
