--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "mn93:7.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
   "mn93:7.4": "„Was denkst du, Assalāyana? ",
   "mn93:7.5": "Wenn ein Adliger lebende Geschöpfe töten, stehlen und sexuelle Verfehlungen begehen würde; wenn er falsche, entzweiende, harte oder unsinnige Rede gebrauchen würde; wenn er begehrlich und böswillig wäre und falsche Ansicht hätte; und wenn sein Körper auseinanderbräche, nach dem Tod, würde er an einem verlorenen Ort wiedergeboren, einem schlechten Ort, in der Unterwelt, der Hölle – könnte das nur einem Adligen widerfahren und keinem Brahmanen? ",
-  "mn93:7.6": "Oder wenn ein Händler "
+  "mn93:7.6": "Oder wenn ein Händler ",
+  "mn93:7.7": "oder ein Arbeiter das Gleiche täte – könnte das nur einem Arbeiter widerfahren und keinem Brahmanen?“ "
 }
