--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -62,5 +62,6 @@
   "mn93:7.13": "Wenn jemand aus irgendeiner der vier Kasten lebende Geschöpfe töten, stehlen und sexuelle Verfehlungen begehen würde; wenn er falsche, entzweiende, harte oder unsinnige Rede gebrauchen würde; wenn er begehrlich und böswillig wäre und falsche Ansicht hätte, dann würde er, wenn sein Körper auseinanderbräche, nach dem Tod, an einem verlorenen Ort wiedergeboren werden, einem schlechten Ort, in der Unterwelt, der Hölle.“ ",
   "mn93:7.14": "„Was ist dann die Quelle für das Selbstvertrauen und den Nachdruck der Brahmanen in dieser Sache, dass sie diese Behauptung aufstellen?“ ",
   "mn93:8.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
-  "mn93:8.4": "„Was denkst du, Assalāyana? "
+  "mn93:8.4": "„Was denkst du, Assalāyana? ",
+  "mn93:8.5": "Wenn ein Brahmane das Töten lebender Geschöpfe, das Stehlen und das Begehen sexueller Verfehlungen unterlassen würde; wenn er den Gebrauch falscher, entzweiender, harter oder unsinnige Rede unterlassen würde; wenn er zufrieden und gütig wäre und rechte Ansicht hätte; und wenn sein Körper auseinanderbräche, nach dem Tod, würde er an einem guten Ort wiedergeboren, in einer himmlischen Welt – könnte das nur einem Brahmanen widerfahren und keinem Adligen, Händler oder Arbeiter?“ "
 }
